<resources>
    <string name="app_name">EmergencyContactApp</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Contactos</string>
    <string name="title_notifications">Historial</string>
    <string name="btn_abrir_mapa">Abrir mapa</string>
    <string name="btn_compartir_ubicacion">Compartir ubicacion</string>
    <string name="no_ubicacion">No se ha encontrado la ubucacion</string>
    <string name="nuevo_contacto">Nuevo contacto de emergencia</string>
    <string name="edit_contacto">Editar contacto de emergencia</string>
    <string name="bbt_limpiar">Limpiar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_editar">Editar</string>
    <string name="nombre_contacto">Nombre de contacto</string>
    <string name="telefono_contacto">Teléfono de contacto</string>
    <string name="correo_contacto">Dirección de correo eletrónico</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="canceled">Operación cancelada</string>
    <string name="savedContact">Contacto guardado con éxito</string>
    <string name="btn_reportar">Reportar incidencia</string>
    <string name="lbl_my_emergy_contact">Mis contactos de emergencia</string>
    <string name="tipo_de_insistence">Tipo de Incidencia</string>
    <string name="insidencia_rapida">Incidencia rápida</string>
    <string name="insidencia_especifica">Incidencia específica</string>
    <string name="indicar_tipo_insidencia">Indique el tipo de incicencia que desea realizar</string>
    <string name="app_mensaje">Indique que aplicación de mensajería desea usar</string>
    <string name="mensaje_insidencia">Seleccione un mensaje de su incidencia</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicaciones_de_mensajeria">Aplicaciónes de mensajería</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="btn_incidencia8">Estoy en peligro, necesito tu ayuda urgente</string>
    <string name="til_insidencia_descriptiva">Otro (Describa su incidencia)</string>
    <string name="btn_inisidencia_descriptiva">Enviar inisidencia descriptiva</string>
    <string name="btn_incidencia7">Alguien me quiere hacer daño</string>
    <string name="btn_incidencia6">Alguien me persigue</string>
    <string name="btn_incidencia5">Estoy mal de salud</string>
    <string name="btn_incidencia4">Tuve un accidente de transito</string>
    <string name="btn_incidencia3">Mi vehiculo no funciona</string>
    <string name="btn_incidencia2">Me quede sin gasolina</string>
    <string name="btn_incidencia0">Me encuentro varado</string>
    <string name="mensaje_insidencia_rapida">Hola, necesito de tu ayuda o asitencia urgente ya que tengo mi vida corre peligro, te adjunto mi ubicacion: </string>
    <string name="mensaje_insicencia0">Hola, me encuentro varado y necesito de tu ayuda, te adjunto mi ubicacion: </string>
    <string name="mensaje_insicencia2">Hola, me he quedado sin gasolina y necesito que vengas a auxiliarme, te adjunto mi ubicacion: </string>
    <string name="mensaje_insicencia3">Hola, Mi vehiculo tiene problemas mecánicos y necesito que vengas a auxiliarme, te adjunto mi ubicacion: </string>
    <string name="mensaje_insicencia4">Hola, he tenido un accidente de tránsito y necesito de tu ayuda, te adjunto mi ubicacion: </string>
    <string name="mensaje_insicencia5">Hola, Me encuentro mal de salud y necesito de tu ayuda urgente, te adjunto mi ubicacion: </string>
    <string name="mensaje_insicencia6">Hola, alguien me esta persiguiendo y necesito de tu ayuda urgente, te adjunto mi ubicacion: </string>
    <string name="mensaje_insicencia7">Hola, alguien me quiere hacer daño y necesito de tu ayuda urgente, te adjunto mi ubicacion: </string>
    <string name="mensaje_insicencia8">Hola, Estoy en peligro, necesito tu ayuda urgente, te adjunto mi ubicacion: </string>
    <string name="este_campo_es_obligatorio">*Este campo es obligatorio*</string>
    <string name="fecha">Fecha</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="no_hay_insidencia">No hay incidencias en el historial</string>
    <string name="no_hay_contacto_emergencia">No hay contactos de emergencia guardados</string>
    <string name="no_hay_contactos_dispositivo">No se han cargado contactos del dispositivo</string>
    <string name="buscar_por">Buscar por:</string>
    <string name="insidencia_no">"Incidencia no. "</string>
    <string name="cerrar">Cerrar</string>
    <string name="tipo">Tipo</string>
    <string name="mensaje">Mensaje</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="no_existe_app">No existe una aplicacion instalada para esta opcion</string>
</resources>